# Backend/docs/swagger.json
@@ -232,6 +232,11 @@
         },
         "/notifications/send_custom": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -283,7 +288,11 @@
         },
         "/notifications/send_preset": {
             "post": {
-                "description": "Updates or adds a new screen time record for a specific device.",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
